cmake_minimum_required(VERSION 2.8)
include_directories("${PROJECT_SOURCE_DIR}/lib/include")
include_directories("${PROJECT_SOURCE_DIR}/../common")
#include_directories("${PROJECT_SOURCE_DIR}/msvc/include")
#include_directories("F:/Downloads/libusbx-1.0.16/libusbx-1.0.16/libusb")
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)
find_package(USB1 REQUIRED)
add_definitions( -DUSELIBUSB )
add_library(bladerf SHARED src/bladerf.c src/si5338.c src/lms.c)
add_library(bladerf_static src/bladerf.c src/si5338.c src/lms.c)
target_link_libraries(bladerf ${LIBUSB_LIBRARIES})
target_link_libraries(bladerf_static ${LIBUSB_LIBRARIES})
